2012-02-24  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-assigns.c (improve_inheritance): Add an argument.  Set it
	up.  Don't change allocation of a reload pseudo.
	(assign_by_spills): Pass parameter to improve_inheritance.

	* lra-constraints.c (extract_loc_address_regs): Process memory as
	a register.
	(process_addr_reg): Reload memory.
	(process_alt_operands): Use get_op_mode instead of GET_MODE.
	(process_address): Use find_reg_note instead of find_regno_note.

2012-02-23  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (inherit_in_ebb): Don't do inheritance from
	output of a jump.

2012-02-23  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-eliminations.c (update_reg_eliminate): Make hard register
	unallocatable when we make it a result of the elimination.

2012-02-22  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (narrow_reload_pseudo_class): New function.
	(match_reload): Call it.
	(SLOW_UNALIGNED_ACCESS): Define the macro.
	(simplify_operand_subreg): Do not change address of improperly
	aligned memory.
	(curr_insn_transform): Invalidate used alternative if the insn is
	changed.

2012-02-21  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (inherit_in_ebb): Put split save before jump
	using the pseudo.

2012-02-16  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (choose_split_class): Check allocno_class too.
	(split_pseudo): Print more debug info about split rejecting
	because of reg class.

2012-02-15  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-coalesce.c (lra_coalesce): Check the split pseudos too.

2012-02-14  Vladimir Makarov  <vmakarov@redhat.com>

	* lra-constraints.c (choose_split_class ): Pass hard_regno instead
	of its class.  Check that the class containts hard_regno.
	(split_pseudo): Reject splitting if choose_split_class returns
	NO_REGS.

2012-02-13  Vladimir Makarov  <vmakarov@redhat.com>

	* lra.c (check_rtl): Ignore addr with UNSPEC.
